[tool.poetry]
name = "bellman-api"
version = "0.1.0"
description = ""
authors = ["Yumi Ko <yumikocheers@gmail.com>, Anthony Santana <anthony@jasantana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
